#55 집안일 삭제 기능 구현
